cmake_minimum_required(VERSION 2.8)
add_definitions("-g -Wall") # <= 新增的编译选项
#link_libraries(${PROJECT_SOURCE_DIR}/lib)
#add_subdirectory(include)
#include_directories(/usr/local/include/APUE)
#add_executable(Apue main.c)
#add_executable(Serv server.c)
#set(CMAKE_EXE_LINKER_FLAGS "-lpthread -L /usr/local/lib -l APUE")
#add_executable(Thread thread.c)
#add_executable(Fork fork.c)
#add_executable(Stat stat.c)
add_executable(Sock sock.c)
#target_link_libraries(Sock -LAPUE)
#add_executable(Dup dup.c)
#add_executable(File file.c)
#add_executable(Client client.c)
#target_link_libraries(Thread pthread)
